PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Support for detecting Facebook's HipHop HHVM PHP implementation
- pts-core: Introduce new pts_define interface
- pts-core: Add debug-self-test option for running a self-hosting PHP/PTS performance test
- phodevi: Fix for memory reporting on OS X
- phodevi: Improved LLVM Clang compiler version detection with modern Apple Xcode
- phodevi: Improved Intel Linux GPU overclocking frequency detection

Phoronix Test Suite 4.4.1-Forsand
14 March 2013

- pts-core: Add the arm-linux-gnueabihf library directory for PTS External Dependency checks
- pts-core: Add SKIP_ALL_TEST_SUPPORT_CHECKS environment variable
- pts-core: Fix screen resolution listening when the resolution fails to be detected through Phodevi
- pts-core: Update openSUSE external dependencies
- pts-core: Strip "project" from reported strings
- phodevi: Add support for detecting the Razor-qt desktop environment
- phodevi: No longer report the Catalyst marketing version number since the DDX is no longer reporting it reliably
- phodevi: Detect if the X.Org Server DDX module was unloaded
- phodevi: Reorder DDX driver fallback detection
- phodevi: Cleanse eCryptfs sig and cipher from showing in mounts file
- phodevi: Improve Linux memory RAM type detection

Phoronix Test Suite 4.4.0-Forsand
26 February 2013

- pts-core: Improvement for detecting installed libraries for external dependency handling
- pts-core: Address redundant dash handling within the result file save name
- phodevi: Support for detecting SurfaceFlinger (Google Android)
- phodevi: Ensure non-ASCII characters are removed from Phodevi properties
- phodevi: Support for reading the OpenGL Core Profile information via glxinfo

Phoronix Test Suite 4.4 Milestone 3
14 February 2013

- pts-core: Incorporate xx.yy (of xx.yy.zz) test profile version string into test result comparison_hash
- pts-core: Return contained tests hash for result files as a raw SHA1