@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2008 - 2012, Phoronix Media
-	Copyright (C) 2008 - 2012, Michael Larabel
+	Copyright (C) 2008 - 2013, Phoronix Media
+	Copyright (C) 2008 - 2013, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -39,6 +39,11 @@ class pts_client
 	public static function init()
 	{
 		pts_define_directories(); // Define directories
+
+		if(function_exists('cli_set_process_title'))
+		{
+			cli_set_process_title('Phoronix Test Suite');
+		}
 
 		if(QUICK_START)
 		{
