@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 - pts-core: Support for detecting Facebook's HipHop HHVM PHP implementation
 - pts-core: Introduce new pts_define interface
 - pts-core: Add debug-self-test option for running a self-hosting PHP/PTS performance test
+- pts-core: Support PHP 5.4's cli_set_process_title() function
 - phodevi: Fix for memory reporting on OS X
 - phodevi: Improved LLVM Clang compiler version detection with modern Apple Xcode
 - phodevi: Improved Intel Linux GPU overclocking frequency detection
